--- a/test.css
+++ b/test.css
@@ -9,8 +9,8 @@ body {
     background-color:rgba(60, 20, 220,0.4);
 }
 
-.main1 {
-    /* display: none; */
+.main2 {
+    display: none;
      /* background-color: red; */
 }
 
@@ -62,6 +62,27 @@ body {
     min-width: 200px;
     width: 50vw;
     max-width: 350px;
+}
+
+.cwai {
+    text-align: center;
+    margin: 15px 0;
+}
+
+.cwai button {
+    padding: 10px;
+    border-radius: 7px;
+    border: none;
+    color: white;
+    cursor: pointer;
+   font-size: 13px;
+    /* min-width: 150px; */
+    align-self: center;
+    background: linear-gradient(blue,navy);
+}
+
+.cwai button:hover {
+    box-shadow: 0px 0px 4px 1px purple;
 }
 
 #output {
@@ -179,6 +200,7 @@ body {
     height: 75px;
     border-radius: 50%;
     border: 2px solid white;
+    background-color: white;
 }
 
 .plex-2 {
@@ -222,19 +244,19 @@ body {
     /* border: 1px solid purple; */
 }
 
-.plex-2 button {
+.plex-2 button, .landed {
     padding: 7px;
     border-radius: 7px;
     border: none;
     color: white;
     cursor: pointer;
-   font-size: 11px;
+   font-size: 12px;
     /* min-width: 150px; */
     align-self: center;
     background: linear-gradient(purple,indigo);
 }
 
-.plex-2 button:hover {
+.plex-2 button:hover, .landed:hover {
     box-shadow: 0px 0px 4px 1px purple;
 }
 
@@ -304,6 +326,14 @@ border-radius: 50%;
     filter: hue-rotate(90deg);
 }
 
+.landiv {
+   /* margin: 20px 0;
+    text-align: center; */
+    position: fixed;
+    top: 30px;
+    left: 30px;
+}
+
 @media (min-width: 800px) {
     .main1 {
         display: flex;
@@ -338,5 +368,9 @@ border-radius: 50%;
         height: 200px;
         width: 200px;
         border-radius: 0%;
+    }
+
+    .landiv button {
+        
     }
 }
