--- a/style.css
+++ b/style.css
@@ -260,6 +260,12 @@ body {
     box-shadow: 0px 0px 4px 1px purple;
 }
 
+#mainBody {
+    /* background-color: #fff; */
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 .comment-box {
     max-width: 300px;
     width: 90%;
@@ -327,11 +333,9 @@ border-radius: 50%;
 }
 
 .landiv {
-   /* margin: 20px 0;
-    text-align: center; */
-    position: fixed;
-    top: 30px;
-    left: 30px;
+   margin: 20px 0;
+    text-align: center;
+    
 }
 
 @media (min-width: 800px) {
@@ -370,7 +374,12 @@ border-radius: 50%;
         border-radius: 0%;
     }
 
-    .landiv button {
-        
-    }
+    .landiv {
+        /* margin: 20px 0;
+         text-align: center; */
+         position: fixed;
+         top: 30px;
+         left: 30px;
+     }
+     
 }
